# project-arkhe

./: .bandit  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DETAIL_LOG.md  EXPERIMENT_LOG.md  FINAL_REPORT.md  LICENSE  MODELS_AND_ASSUMPTIONS.md  Makefile  PRIVATE_IMPLEMENTATION_PLAN.md  PR_TEMPLATE.md  QUALITY_REPORT.md  README-ko.md  README.md  README_KR.md  RESEARCH_SUMMARY.md  SUMMARY_LOG.md  analyze_compression_failure.py  basic_model_test.py  benchmark_comparison.py  hierarchical_results.txt  improved_multiagent_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_demo.py  run_experiment.py  simple_hierarchical_test.py  test_full_pipeline.py  test_information_asymmetry.py  test_llm_integration.py  test_llm_quick.py  test_ollama.py  test_phase3_integration.py  test_plugin_system.py  (+4 more)
.claude/: settings.local.json
.claude/agents/: nextjs-backend-architect.md  nextjs-code-reviewer.md  project-lifecycle-manager.md  react-ui-performance-reviewer.md
.github/workflows/: code-quality.yml
config/: experiments.yaml  models.yaml  plugin_config.json  plugin_config_schema.json
datasets/: complex_problems.json  complex_problems.py  experimental_questions.json  mixed_benchmark.json  standard_benchmarks.py
docs/: CLAUDE.md  CLAUDE_LOCAL_COMPLIANCE_REPORT.md  CLAUDE_LOCAL_FINAL_COMPLIANCE_REPORT.md  CONTRIBUTING.md  EXPERIMENT_LOG.md  MULTIROOM_CHAT_DESIGN.md  PHASE3_COMPLETION_REPORT.md
experiments/: adaptive_system_test.py  complex_reasoning_test.py  comprehensive_model_comparison.py  consistency_preservation_experiment.py  context_mixing_ai_experiment.py  context_separation_arkhe_experiment.py  context_separation_proof_of_concept.py  context_separation_test.py  creative_collaboration_test.py  detailed_analysis.py  entropy_balanced_pipeline.py  entropy_optimization_test.py  manual_test_scenarios.md  multiroom_conversation_experiment.py  quick_model_comparison.py  run_2stage_comparison.py  run_baseline_comparison.py  run_category_comparison.py  run_complex_comparison.py  run_entropy_experiment.py  run_experiment.py  run_experiment_simple.py  run_quick_demo.py  version_workspace_demo.py
experiments/archive/: asymmetry_test.py  bench_simple.py  economic_test.py  integrated_test.py  quick_ac_test.py  quick_test.py  run_prototype.py
experiments/benchmarks/: benchmark_comparison.py  test_hierarchical_comparison.py
experiments/prototypes/: basic_model_test.py  improved_multiagent_test_v2.py  simple_hierarchical_test.py  templated_basic_model_test.py  test_7b_pipeline.py  test_b_approach.py  test_improved_judge.py  test_simple_reasoning.py  test_thought_transfer.py
prompts/: tasks.jsonl
scripts/: experiment_runner.py  run_matrix.ps1  setup.ps1
src/: __init__.py
src/agents/: __init__.py  claude_agent.py  complexity_analyzer.py  economic_agent.py  economic_intelligence.py  economic_intelligence_backup.py  gpt_oss_agent.py  hierarchy.py  information_asymmetry.py  integrated_arkhe.py  recursive_agent.py
src/evaluation/: plugin_engine.py
src/integration/: __init__.py  plugin_experiment_adapter.py
src/llm/: __init__.py  llm_interface.py  simple_llm.py
src/metrics/: information_theory.py
src/multiroom/: __init__.py  infinite_context.db  infinite_context_manager.py  micro_context_manager.py  room_manager.py  version_workspace_manager.py
src/orchestrator/: __init__.py  adaptive_system.py  economic_intelligence.py  experimental_pipeline.py  isolation_pipeline.py  perfect_economic_intelligence.py  pipeline.py  thought_aggregator.py  thought_compression_pipeline.py
src/plugins/: __init__.py  interfaces.py  registry.py
tests/: test_2stage_pipeline.py  test_3stage_pipeline.py  test_acceptance_criteria.py  test_claude_integration.py  test_contextual_pipeline.py  test_economic_intelligence.py  test_economic_intelligence_simple.py  test_hierarchy_ac.py  test_integrated_arkhe.py  test_multi_model.py  test_perfect_economic_intelligence.py  test_real_economic_intelligence.py
(+11 files in other folders)
